# codekata-rust

./: Cargo.toml  README.md
english-beggars/: Cargo.toml
english-beggars/src/: main.rs
isomorphic-words/: Cargo.toml
isomorphic-words/src/: main.rs
mexican-wave/: Cargo.toml
mexican-wave/src/: main.rs
missing-letter/: Cargo.toml
missing-letter/src/: main.rs
reverse-inside-parentheses/: Cargo.toml
reverse-inside-parentheses/src/: main.rs
who-likes-it/: Cargo.toml
who-likes-it/src/: main.rs
