[package]
name = "codekata-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "english-beggars"

[[bin]]
name = "isomorphic-words"

[[bin]]
name = "mexican-wave"

[[bin]]
name = "missing-letter"

[[bin]]
name = "reverse-inside-parentheses"

[[bin]]
name = "who-likes-it"
